# prolog

./: .gitignore  TODO  gui.hs  prolog.cabal
Prolog/: Console.hs  Error.hs  FilePath.hs  Gui.hs  Main.hs  Net.hs  Parse.hs  Time.hs
