name:          prolog
version:       0.1
synopsis:      Prolog Online Viewer
license:       OtherLicense
license-file:  LICENSE
author:        Grant Mather
maintainer:    hcaulfield57@gmail.com
build-type:    Simple
cabal-version: >=1.8

executable prolog
    main-is: Prolog/Main.hs
    build-depends: base, directory, 
        filepath, HTTP, pretty, tagsoup, time
